# SCQ-Betting

./: .gitignore  Makefile  MasterStats.xlsx  README.md  algorithm.py  bet.py  bets_2024-04-25.xlsx  betting_data_2024-04-25.xlsx  data.py  game.py  main.py  pyproject.toml  simulation.py  team1_algorithm.py  test.py
__data__/: MasterStats.xlsx  bets_.xlsx  bets_2024-04-28.xlsx  betting_data.xlsx  betting_data_2024-04-28.xlsx  betting_data_2024-05-01.xlsx  results_data_2024-04-29.xlsx  test_sim.xlsx  ~$betting_data_2024-04-25.xlsx
scq_betting/: algorithm.py  bet.py  data.py  game.py  gamesplits.py  main.py  my_algorithm.py  simulation.py  team2_algorithm.py  test.py
